@@ -4,7 +4,7 @@ Description: ignore GCC plugins
  CONFIG_GCC_PLUGIN_STRUCTLEAK and CONFIG_GCC_PLUGIN_RANDSTRUCT.
 --- a/Kbuild
 +++ b/Kbuild
-@@ -105,7 +105,7 @@ NV_CONFTEST_CMD := /bin/sh $(NV_CONFTEST
+@@ -110,7 +110,7 @@ NV_CONFTEST_CMD := /bin/sh $(NV_CONFTEST
  NV_CFLAGS_FROM_CONFTEST := $(shell $(NV_CONFTEST_CMD) build_cflags)
  
  NV_CONFTEST_CFLAGS = $(NV_CFLAGS_FROM_CONFTEST) $(EXTRA_CFLAGS) -fno-pie
