@@ -21,7 +21,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  
  
  .SS "\-l SEC, \-\-loop=SEC"
-@@ -228,7 +228,7 @@ Typically useful if a double bit ECC err
+@@ -232,7 +232,7 @@ Typically useful if a double bit ECC err
  Optional \fI\-i\fR switch can be used to target one or more specific devices.
  Without this option, all GPUs are reset.
  Requires root.
@@ -29,8 +29,8 @@ Description: fix hyphenation and spelling in nvidia-smi.1
 +There can\(aqt be any applications using these devices (e.g. CUDA application, graphics application like X server, monitoring application like other instance of nvidia\-smi).
  There also can\(aqt be any compute applications running on any other GPU in the system.
  
- Any GPUs with NVLink connections to a GPU being reset must also be reset in
-@@ -281,7 +281,7 @@ Specifies maximum power limit in watts.
+ Starting with the NVIDIA Ampere architecture, GPUs with NVLink connections can be individually reset.  On NVSwitch systems, Fabric Manager is required to facilitate reset.
+@@ -287,7 +287,7 @@ Specifies maximum power limit in watts.
  Accepts integer and floating point numbers.
  Only on supported devices from Kepler family.
  Requires administrator privileges.
@@ -39,7 +39,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  
  .SS "\-cc, \-\-cuda\-clocks=MODE"
  Overrides or restores default CUDA clocks
-@@ -361,10 +361,10 @@ The specified file will be overwritten.
+@@ -372,10 +372,10 @@ The specified file will be overwritten.
  Display Unit DTD instead of device DTD.
  
  .SS "stats"
@@ -49,10 +49,10 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .SS "topo"
 -Display topology information about the system.  Use "nvidia-smi topo -h" for more information.  Linux only.
 +Display topology information about the system.  Use "nvidia-smi topo \-h" for more information.  Linux only.
- Shows all GPUs NVML is able to detect but CPU affinity information will only be shown for GPUs with Kepler or
+ Shows all GPUs NVML is able to detect but CPU and NUMA node affinity information will only be shown for GPUs with Kepler or
  newer architectures.
  Note: GPU enumeration is the same as NVML.
-@@ -449,7 +449,7 @@ Display can be active even when no monit
+@@ -463,7 +463,7 @@ Display can be active even when no monit
  .SS "Persistence Mode"
  A flag that indicates whether persistence mode is enabled for the GPU.
  Value is either "Enabled" or "Disabled".
@@ -61,7 +61,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  This minimizes the driver load latency associated with running dependent apps, such as CUDA programs.
  For all CUDA-capable products.
  Linux only.
-@@ -459,7 +459,7 @@ A flag that indicates whether accounting
+@@ -473,7 +473,7 @@ A flag that indicates whether accounting
  Value is either \"Enabled\" or \"Disabled\"
  When accounting is enabled statistics are calculated for each compute process running on the GPU.
  Statistics can be queried during the lifetime or after termination of the process. The execution time of process is reported as 0 while the process is in running state and updated to actual execution time after the process has terminated.
@@ -70,7 +70,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  
  .SS "Accounting Mode Buffer Size"
  Returns the size of the circular buffer that holds list of processes that can be queried for accounting stats.
-@@ -533,7 +533,7 @@ Version for the power management data.
+@@ -547,7 +547,7 @@ Version for the power management data.
  
  
  .SS "GPU Operation Mode"
@@ -79,7 +79,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  
  Each GOM is designed to meet specific user needs.
  
-@@ -866,7 +866,7 @@ Please note that for boards without INA
+@@ -904,7 +904,7 @@ Please note that for boards without INA
  
  .TP 15
  .B "Power Limit"
@@ -88,7 +88,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  Only available if power management is supported.
  Requires Inforom PWR object version 3.0 or higher or Kepler device.
  On Kepler devices Power Limit can be adjusted using \-pl,\-\-power\-limit= switches.
-@@ -1440,7 +1440,7 @@ Display the information about FBC sessio
+@@ -1598,7 +1598,7 @@ Destroys compute instances. The command
  .PP
  .SH "UNIT ATTRIBUTES"
  .PP
@@ -97,7 +97,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  Unless otherwise noted all numerical results are base 10 and unitless.
  
  .SS "Timestamp"
-@@ -1552,7 +1552,7 @@ For all S-class products.
+@@ -1710,7 +1710,7 @@ For all S-class products.
  .PP
  .SH "NOTES"
  .PP
@@ -106,7 +106,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  Please see the relevant section of the driver README file.
  
  .PP
-@@ -1570,7 +1570,7 @@ Query UUID and persistence mode of all G
+@@ -1728,7 +1728,7 @@ Query UUID and persistence mode of all G
  Query ECC errors and power consumption for GPU 0 at a frequency of 10 seconds, indefinitely, and record to the file out.log.
  .SS
  "nvidia\-smi -c 1 -i GPU\-b2f5f1b745e3d23d\-65a3a26d-097db358\-7303e0b6\-149642ff3d219f8587cde3a8"
@@ -115,7 +115,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .SS "nvidia\-smi -q -u -x --dtd"
  Query attributes for all Units once, and display in XML format with embedded DTD to stdout.
  .SS "nvidia\-smi --dtd -u -f nvsmi_unit.dtd"
-@@ -1717,13 +1717,13 @@ Set applications clocks to 2500 MHz memo
+@@ -1896,13 +1896,13 @@ Set applications clocks to 2500 MHz memo
    * Added support for K40d and K80.
  .PP 1
  
@@ -131,7 +131,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Added support for displaying the GPU encoder and decoder utilizations
-@@ -1756,19 +1756,19 @@ Set applications clocks to 2500 MHz memo
+@@ -1935,19 +1935,19 @@ Set applications clocks to 2500 MHz memo
   
  .PP 1
  
@@ -154,7 +154,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
   
-@@ -1777,13 +1777,13 @@ Set applications clocks to 2500 MHz memo
+@@ -1956,13 +1956,13 @@ Set applications clocks to 2500 MHz memo
    * Added reporting of Display Active state and updated documentation to clarify how it differs from Display Mode and Display Active state
  .PP 1
  
@@ -171,7 +171,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Renamed Clock Throttle Reason User Defined Clocks to Applications Clocks Setting
-@@ -1792,16 +1792,16 @@ Set applications clocks to 2500 MHz memo
+@@ -1971,16 +1971,16 @@ Set applications clocks to 2500 MHz memo
    * On error, return codes have distinct non zero values for each error class. See RETURN VALUE section
  .PP 1
  
@@ -191,7 +191,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Added the enforced power limit to the query output
-@@ -1810,7 +1810,7 @@ Set applications clocks to 2500 MHz memo
+@@ -1989,7 +1989,7 @@ Set applications clocks to 2500 MHz memo
   
  .PP 1
  
@@ -200,7 +200,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
   
-@@ -1819,13 +1819,13 @@ Set applications clocks to 2500 MHz memo
+@@ -1998,13 +1998,13 @@ Set applications clocks to 2500 MHz memo
    * Added reporting of GPU Operation Mode (GOM)
  .PP 1
  
@@ -216,7 +216,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
   
-@@ -1840,10 +1840,10 @@ Set applications clocks to 2500 MHz memo
+@@ -2019,10 +2019,10 @@ Set applications clocks to 2500 MHz memo
    * Better error handling when NVML shared library is not present in the system
  .PP 1
  
@@ -229,7 +229,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * When reporting free memory, calculate it from the rounded total and used memory so that values add up
-@@ -1852,7 +1852,7 @@ Set applications clocks to 2500 MHz memo
+@@ -2031,7 +2031,7 @@ Set applications clocks to 2500 MHz memo
    * Added reporting of power management limit constraints and default limit
  .PP 1
  
@@ -238,7 +238,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Added reporting of texture memory ECC errors
-@@ -1864,7 +1864,7 @@ Set applications clocks to 2500 MHz memo
+@@ -2043,7 +2043,7 @@ Set applications clocks to 2500 MHz memo
   
  .PP 1
  
@@ -247,7 +247,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
   
-@@ -1876,7 +1876,7 @@ Set applications clocks to 2500 MHz memo
+@@ -2055,7 +2055,7 @@ Set applications clocks to 2500 MHz memo
    * When running commands on multiple GPUs at once N/A errors are treated as warnings.
  .PP 1
  
@@ -256,7 +256,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * UUID format changed to match UUID standard and will report a different value.
-@@ -1885,7 +1885,7 @@ Set applications clocks to 2500 MHz memo
+@@ -2064,7 +2064,7 @@ Set applications clocks to 2500 MHz memo
   
  .PP 1
  
@@ -265,7 +265,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
   
-@@ -1894,7 +1894,7 @@ Set applications clocks to 2500 MHz memo
+@@ -2073,7 +2073,7 @@ Set applications clocks to 2500 MHz memo
    * Report VBIOS version.
  .PP 1
  
@@ -274,7 +274,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Added reporting of PCI Sub System ID
-@@ -1903,13 +1903,13 @@ Set applications clocks to 2500 MHz memo
+@@ -2082,13 +2082,13 @@ Set applications clocks to 2500 MHz memo
    * Updated docs to indicate we support M2075 and C2075
  .PP 1
  
@@ -290,7 +290,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Added message when NVIDIA driver is not running
-@@ -1921,19 +1921,19 @@ Set applications clocks to 2500 MHz memo
+@@ -2100,19 +2100,19 @@ Set applications clocks to 2500 MHz memo
    * Getting pending driver model works on non-admin
  .PP 1
  
@@ -314,7 +314,7 @@ Description: fix hyphenation and spelling in nvidia-smi.1
  .PP 1
  
    * Changed versioning scheme to also include "driver version"
-@@ -1942,10 +1942,10 @@ Set applications clocks to 2500 MHz memo
+@@ -2121,10 +2121,10 @@ Set applications clocks to 2500 MHz memo
    * XML format always conforms to DTD, even when error conditions occur
  .PP 1
  
